--- a/style.css
+++ b/style.css
@@ -1,54 +1,53 @@
-body{margin:0; background-color: silver; padding:10px;}
+body{margin:0; padding:10px;}
 a:link{color:black; text-decoration:none;}
 a:visited{color:black;text-decoration: none;}
 a:hover{color:#0000FF; text-decoration: underline;}
 a:active{color:#0000FF; text-decoration: none;}
-h1{text-align: center; margin:0;}
+h1{font-size: 20px; text-align: center; margin:0;}
 h2{margin:0;}
 ol{margin:0;line-height:2em}
 div{
   margin:0; padding:10px;
 }
 #top{
-  background-color: white;
-  padding:5px;
-  border-bottom: none;
-  margin:0
+  border: 3px solid black;
+  border-left: 4px solid black;
+  border-right: 4px solid black;
+  padding:5px; padding-top: 0px;
+  margin-bottom:10px
 }
 #top a{
   color: black; text-decoration:none;
 }
-#bottom{
-  margin:0;
-  padding:0;
-  background-color: white;
-  display: block;
-}
-#left{
-  background-color: #eeffee;
+#menu{
+  background-color: rgb(249, 255, 255);
   padding:10px;
-  border-right:1px solid silver;
+  border-left:2px dashed black;
+  border-right:2px dashed black;
+  border-radius: 10px;
   margin:0;
 }
-#left li{
+#menu li{
   display:inline;
-  border: 3px solid white;
-  background-color: #ffc;
+  border: 2px solid rgb(230, 255, 255);
+  border-radius: 10px;
+  background-color: rgb(230, 240, 240);
+  font-size: 15px;
+  font-weight: bold;
   padding: 5px;
 }
-#left ol{
+#menu ol{
   padding: 0;
   text-align: center;
 }
-#right{
+#content{
   padding: 10;
   text-align: center;
 }
-#right a{
+#content a{
   text-decoration: underline;
 }
 #foot{
-  color:white;
   border-top:3px solid silver;
   padding:1px;
   font-size:small;
@@ -57,7 +56,7 @@ div{
   margin:0; padding: 0;
   color:lightgrey
 }
-#right p{
+#content p{
   margin-top: 20px;
   margin-bottom: 10px;
 }
@@ -67,12 +66,35 @@ div{
 #buttons{
   text-align: center;
 }
+#day_night{
+  background-color: navy;
+  color: yellow;
+  width: 50px;
+  font-weight: bold;
+  border: none;
+
+}
 .focus{
-  margin-left:30px; margin-top:10px; margin-bottom:10px;
+  margin-menu:30px; margin-top:10px; margin-bottom:10px;
   color:black; font-weight: bold;
 }
 .heart{
-  color:red; font-size:1.5em
+  color:red; font-size:25px
+}
+.hibutton{
+  border-radius:12px;
+  background-color: white;
+  color: black;
+  border: 2px solid skyblue;
+  font-size: 15px;
+  font-weight: bold;
+  padding: 3px 10px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+.hibutton:hover{
+  background-color: skyblue;
+  color:white;
 }
 #present{
   font-weight:bold;
